Begin fixing the header on mobile (kind of)

--- a/OpenShow/core/static/core/extras.css
+++ b/OpenShow/core/static/core/extras.css
@@ -49,6 +49,10 @@ body > header {
     padding-inline: 1rem;
 }
 
+.header-main h1 {
+    font-size: 1.7rem;
+}
+
 h2 {
     margin: 0;
 }
